[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "whatsapp-mcp"
version = "0.1.0"
description = "Simple MCP server exposing a WhatsApp send_message tool"
requires-python = ">=3.11"
dependencies = [
  "fastmcp>=0.2",
  "requests>=2.32"
]

[tool.setuptools]
# include server.py directly
py-modules = ["server"]
